Adicionando autenticação com token e cadastro e login com senha cripitografada

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,3 +13,6 @@ spring:
     username: postgres
     password: postgress
     driverClassName: org.postgresql.Driver
+  security:
+    token:
+      secret: "socorro"
